redesign selector and scanner experiences
